--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "marked": "^0.3.5"
   },
   "devDependencies": {
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.24",
     "electron-packager": "^5.1.0",
-    "electron-prebuilt": "^0.32.1"
+    "electron-prebuilt": "^0.32.1",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.2.1"
   }
 }
